fdo#60710 SwXTextPortionEnumeration: filter out fields from the undo stack

The UNO API provides the annotation field associated to a comment range
fieldmark when the fieldmark starts. To achieve this, it looks up the
annotation field by name, but it failed to ignore the fields which are
present only because the undo stack still holds a reference to them,
making the ODF export filter fail to export the document.

Change-Id: Ia3b738a1eca7ed9981e1963b3d70ea8e3dbe8db8